--- a/embedded/platformio.ini
+++ b/embedded/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
+[platformio]
+lib_dir = "../externals"
+
 [env:nano]
 platform = atmelavr
 framework = arduino
